<resources>
    <string name="app_name">Myapp</string>
    <string name="Track_Drink">Track Drink</string>
    <string name="App_Logo">My Drinking App Logo</string>
    <string name="BAC_Percent">0.00%</string>
    <string name="Warning">*Your BAC percentage is based on calculation and might be off</string>
    <string name="Tests">Sobriety Test</string>
    <string name="Help">Help</string>
    <string name="Settings_edit">Edit</string>
    <string name="Disclaimer">My Drinking Buddy, LLC is hereafter known as "The Company". The Company is not to be held liable for any damages, injuries, or death caused by usage of the app. The Company does not guarantee that the app will produce accurate health information and is not endorsed by a medical professional. The Company does not encourage driving while under the influence and cannot be held liable in court as supporting evidence in DUI trials.</string>
    <string name="click_the_image_of_the_cow">Click the image of the cow</string>
    <string name="cow_picture">Cow Picture</string>
    <string name="cat_picture">Cat Picture</string>
    <string name="dog_picture">Dog Picture</string>
    <string name="squirrel_picture">Squirrel Picture</string>
    <string name="click_the_image_of_the_circle">Click the image of the Circle</string>
    <string name="square_picture">Square Picture</string>
    <string name="triangle_picture">Triangle Picture</string>
    <string name="circle_picture">Circle Picture</string>
    <string name="octogon_picture">Octogon Picture</string>
    <string name="click_the_image_of_the_shoes">Click the image of the shoes</string>
    <string name="pants_picture">Pants Picture</string>
    <string name="shirt_picture">Shirt Picture</string>
    <string name="shoes_picture">Shoes Picture</string>
    <string name="sock_picture">Sock Picture</string>
    <string name="click_the_image_of_the_purple">Click the image of the Purple</string>
    <string name="blue_picture">Blue Picture</string>
    <string name="orange_picture">Orange Picture</string>
    <string name="purple_picture">Purple Picture</string>
    <string name="table_picture">Table Picture</string>
    <string name="click_the_image_of_the_grapes">Click the image of the grapes</string>
    <string name="apple_picture">Apple Picture</string>
    <string name="grape_picture">Grape Picture</string>
    <string name="peach_picture">Peach Picture</string>
    <string name="pineapple_picture">Pineapple Picture</string>
    <string name="click_the_image_of_the_table">Click the image of the table</string>
    <string name="bed_picture">Bed Picture</string>
    <string name="chair_picture">Chair Picture</string>
    <string name="couch_picture">Couch Picture</string>
    <string name="Settings_age_static_display">Age:</string>
    <string name="Settings_age">Unknown</string>
    <string name="Settings_weight_static_display">Weight:</string>
    <string name="Settings_weight">Unknown</string>
    <string name="Settings_height_static_display">Height:</string>
    <string name="Settings_height">Unknown</string>
    <string name="Settings_gender_static_display">Gender:</string>
    <string name="Settings_gender">Unknown</string>
    <string name="Settings_gender_static_male">Male</string>
    <string name="Settings_gender_static_female">Female</string>
    <string name="type_the_following_text">Type the following text:</string>
    <string name="type_here">Type here…</string>
    <string name="Done_button">Done</string>
    <string name="sentence_test">Sentence Test</string>
    <string name="image_test">Image Test</string>
    <string name="submit">Submit</string>
    <string name="_911">911</string>
    <string name="parking">Parking</string>
    <string name="uber">Uber</string>
    <string name="todo">TODO</string>
    <string name="home_button">Home Button</string>
    <string name="champagne_button">Champagne Button</string>
    <string name="wine">WINE</string>
    <string name="cocktail">Cocktail</string>
    <string name="champagne">Champagne</string>
    <string name="beer">Beer</string>
    <string name="word_test">word test</string>
    <string name="MyDrinkingBuddy" />
    <string name="inputvalidation">Please enter value less than 100</string>
    <string name="inputvalidMsg">Please Enter a Value of 100% or less</string>

</resources>
